[metadata]
name = django-ip-logger
version = 1.0.1
description = Django application for saving IP adresses visiting a web application.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lord-sarcastic/django-ip-logger
author = Ayodeji Adeoti
author_email = adeoti.15.jude@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2
    Framework :: Django :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2